# pulumi-scaleway

./: .ci-mgmt.yaml  .gitignore  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  go.work  go.work.sum  mise.toml
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/lbrlabs_pulumi_scaleway/: __init__.py  _inputs.py  _utilities.py  account_project.py  account_ssh_key.py  apple_slicon_valley_server.py  baremetal_server.py  block_snapshot.py  block_volume.py  cockpit.py  cockpit_grafana_user.py  cockpit_token.py  container.py  container_cron.py  container_domain.py  container_namespace.py  container_token.py  container_trigger.py  database.py  database_acl.py  database_backup.py  database_instance.py  database_privilege.py  database_read_replica.py  database_user.py  documentdb_database.py  documentdb_instance.py  documentdb_private_network_endpoint.py  documentdb_privilege.py  documentdb_read_replica.py  documentdb_user.py  domain_record.py  domain_zone.py  flexible_ip.py  flexible_ip_mac_address.py  function.py  function_cron.py  function_domain.py  function_namespace.py  function_token.py  (+146 more)
sdk/python/lbrlabs_scaleway/: README.md  __init__.py  account_ssh_key.py  apple_slicon_valley_server.py  baremetal_server.py  container.py  container_cron.py  container_namespace.py  database.py  database_acl.py  database_backup.py  database_instance.py  database_privilege.py  database_read_replica.py  database_user.py  domain_record.py  domain_zone.py  flexible_ip.py  function.py  (+42 more)
(+5691 files in other folders)
