[project]
  name = "pulumiverse_scaleway"
  description = "A Pulumi package for creating and managing Scaleway cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "scaleway", "pulumiverse"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "1.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.scaleway.com"
    Repository = "https://github.com/pulumiverse/pulumi-scaleway"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumiverse_scaleway = ["py.typed", "pulumi-plugin.json"]
